[package]
name = "dev-tunnel"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tungstenite = "0.26.2"
futures = "0.3.31"
smoltcp = "0.12.0"
clap = { version = "4.5.31", features = ["derive"] }
pnet = "0.35.0"
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
